--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -12,9 +12,14 @@
 	// цвета
 	--light-color: #fff;
 	--black-color: #080606;
-	--main-color: #59443f;
-	--main-color: #ffc59e;
+	--main-color-dark: #59443f;
+	--main-color-light: #ffc59e;
 	--grey-color: #c3b9b5;
 	--grey-light-color: #ede9e8;
+	--bg-light: #ddd4f3;
 	--bg-color: #fbf8f8;
+
+	//размер шрифта
+	--main-fz: 20px;
+	--phone-fz: 16px;
 }
