--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -1,6 +1,7 @@
 :root {
 	// базовые
 	--font-family: "FuturaNew", sans-serif;
+	--font-family-second: "SchoolBook", sans-serif;
 	--content-width: 1750px;
 	--content-width--wide: 1640px;
 	--content-width--narrow: 1350px;
