--- a/src/modules/_footer/_footer.scss
+++ b/src/modules/_footer/_footer.scss
@@ -107,8 +107,10 @@
 	&__politics {
 		transition: color 0.3s ease 0s;
 
-		&:hover {
-			color: var(--grey-color);
+		@media (any-hover: hover) {
+			&:hover {
+				color: var(--grey-color);
+			}
 		}
 	}
 
