--- a/src/modules/_header/_header.scss
+++ b/src/modules/_header/_header.scss
@@ -26,7 +26,7 @@
 	}
 
 	&__burger {
-		z-index: 2;
+		z-index: 101;
 	}
 }
 
@@ -34,6 +34,8 @@
 	color: var(--grey-color);
 	display: flex;
 	align-items: center;
+	flex-wrap: wrap;
+	justify-content: center;
 
 	@include mq("tablet", max) {
 		margin-right: 20px;
@@ -41,25 +43,26 @@
 
 	@include mq("tablet-s", max) {
 		position: absolute;
+		display: block;
 		background-color: var(--main-color-light);
 		padding-top: 100px;
-		margin-right: 0;
 		left: 0;
 		top: 0;
 		right: 0;
 		bottom: 0;
 		height: 100%;
 		width: 100%;
-		flex-direction: column;
+		text-align: center;
 		transform: translateY(-200%);
 		transition: transform 0.4s;
-		z-index: 1;
-		overflow: hidden;
+		z-index: 100;
+		overflow: auto;
 	}
 
 	&__item {
 		margin: 0 35px;
 		text-align: center;
+		line-height: 1.8;
 
 		@include mq("desktop-s", max) {
 			margin: 0 20px;
@@ -67,10 +70,13 @@
 
 		@include mq("tablet-s", max) {
 			color: var(--main-color-dark);
+			font-size: 24px;
 			width: 100%;
+			line-height: 1.2;
+			margin: 0;
 
 			&:not(:last-child) {
-				margin: 0 0 20px 0;
+				margin: 0 0 30px 0;
 			}
 		}
 	}
@@ -79,8 +85,10 @@
 		padding: 10px 0;
 		transition: color 0.3s ease 0s;
 
-		&:hover {
-			color: var(--main-color-dark);
+		@media (any-hover: hover) {
+			&:hover {
+				color: var(--main-color-dark);
+			}
 		}
 	}
 
