--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -4,3 +4,5 @@
 @import "./mixins/font-face";
 @import "./mixins/disable-mob-hover";
 @import "./mixins/styles";
+@import "./mixins/adaptive-value";
+@import "./mixins/mini";
