--- a/src/scss/elements/_blocks.scss
+++ b/src/scss/elements/_blocks.scss
@@ -22,6 +22,10 @@
 	max-width: 310px;
 	width: 100%;
 
+	@include mq("phone", max) {
+		max-width: 250px;
+	}
+
 	&__item {
 		&:not(:last-child) {
 			margin-right: 10px;
@@ -33,8 +37,22 @@
 			fill: var(--bg-light);
 			transition: fill 0.3s ease 0s;
 
-			&:hover {
-				fill: var(--grey-color);
+			@media (any-hover: hover) {
+				&:hover {
+					fill: var(--grey-color);
+				}
+			}
+		}
+	}
+
+	&--grey {
+		svg {
+			fill: var(--grey-color);
+
+			@media (any-hover: hover) {
+				&:hover {
+					fill: var(--main-color-dark);
+				}
 			}
 		}
 	}
@@ -50,8 +68,10 @@
 	&__link {
 		transition: color 0.3s ease 0s;
 
-		&:hover {
-			color: var(--grey-color);
+		@media (any-hover: hover) {
+			&:hover {
+				color: var(--grey-color);
+			}
 		}
 	}
 }
@@ -61,8 +81,10 @@
 	align-items: center;
 	color: var(--main-color-light);
 
-	&:hover {
-		color: var(--main-color-dark);
+	@media (any-hover: hover) {
+		&:hover {
+			color: var(--main-color-dark);
+		}
 	}
 
 	&__btn {
@@ -71,8 +93,10 @@
 		padding: 10px 0 10px 10px;
 		transition: color 0.3s ease 0s;
 
-		&:hover {
-			color: var(--main-color-dark);
+		@media (any-hover: hover) {
+			&:hover {
+				color: var(--main-color-dark);
+			}
 		}
 
 		@include mq("phone", max) {
