--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -17,5 +17,6 @@
 @import "../modules/_main-slider/_main-slider";
 @import "../modules/_services/_services";
 @import "../modules/_about-block/_about-block";
+@import "../modules/_why-choose/_why-choose";
 
 @import "../modules/_footer/_footer";
