full first page

--- a/src/modules/_footer/_footer.scss
+++ b/src/modules/_footer/_footer.scss
@@ -47,6 +47,7 @@
 	&__bottom {
 		display: flex;
 		justify-content: space-between;
+		@include adaptiveValue("padding-left", 110, 1);
 
 		@include mq("tablet", max) {
 			display: block;
