--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -18,5 +18,7 @@
 @import "../modules/_services/_services";
 @import "../modules/_about-block/_about-block";
 @import "../modules/_why-choose/_why-choose";
+@import "../modules/_app-block/_app-block";
+@import "../modules/_contacts-block/_contacts-block";
 
 @import "../modules/_footer/_footer";
