--- a/src/scss/base/_settings.scss
+++ b/src/scss/base/_settings.scss
@@ -57,11 +57,11 @@ body {
 }
 
 .container--content-wide {
-	max-width: var(--container-width--wide);
+	max-width: var(--content-width-wide);
 }
 
 .container--content-narrow {
-	max-width: var(--container-width--narrow);
+	max-width: var(--content-width-narrow);
 }
 
 .logo {
