--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -3,8 +3,8 @@
 	--font-family: "FuturaNew", sans-serif;
 	--font-family-second: "SchoolBook", sans-serif;
 	--content-width: 1750px;
-	--content-width--wide: 1640px;
-	--content-width--narrow: 1350px;
+	--content-width-wide: 1640px;
+	--content-width-narrow: 1350px;
 	--container-offset: 15px;
 	--container-width: calc(var(--content-width) + (var(--container-offset) * 2));
 	--container-width--wide: calc(var(--content-width--wide) + (var(--container-offset) * 2));
