--- a/src/modules/_header/_header.scss
+++ b/src/modules/_header/_header.scss
@@ -28,6 +28,11 @@
 	&__burger {
 		z-index: 101;
 	}
+
+	&--small {
+		margin: 30px 0 30px;
+		box-shadow: 0 13px 18px rgba(8, 6, 6, 0.1);
+	}
 }
 
 .menu {
