--- a/src/scss/make-order.scss
+++ b/src/scss/make-order.scss
@@ -13,13 +13,9 @@
 @import "./elements/titles";
 @import "./elements/blocks";
 @import "./elements/cards";
+@import "./elements/forms";
 
 //блоки страниц
 @import "../modules/_header/_header";
-@import "../modules/_main-slider/_main-slider";
-@import "../modules/_services/_services";
-@import "../modules/_about-block/_about-block";
-@import "../modules/_why-choose/_why-choose";
-@import "../modules/_app-block/_app-block";
-@import "../modules/_contacts-block/_contacts-block";
+@import "../modules/_make-order/_make-order";
 @import "../modules/_footer/_footer";
