--- a/src/scss/elements/_blocks.scss
+++ b/src/scss/elements/_blocks.scss
@@ -192,3 +192,87 @@
 	&__img {
 	}
 }
+
+.page-wrapper {
+	display: flex;
+
+	@include mq("desktop-s", max) {
+		display: block;
+	}
+
+	&__aside {
+		flex: 0 1 420px;
+		margin-right: 20px;
+
+		@include mq("desktop-s", max) {
+			margin-right: 0;
+			margin-bottom: 60px;
+		}
+	}
+
+	&__title {
+		margin-bottom: 100px;
+
+		@include mq("desktop-s", max) {
+			margin-bottom: 30px;
+		}
+	}
+
+	&__list-nav {
+		color: var(--grey-color);
+		font-weight: 700;
+		font-size: 20px;
+		line-height: 1.5;
+		text-transform: uppercase;
+	}
+
+	&__item {
+		&:not(:last-child) {
+			margin-bottom: 30px;
+
+			@include mq("desktop-s", max) {
+				margin-bottom: 10px;
+			}
+		}
+	}
+
+	&__link {
+		@media (any-hover: hover) {
+			&:hover {
+				color: var(--main-color-dark);
+			}
+		}
+	}
+
+	&__content {
+		max-width: 910px;
+		width: 100%;
+		margin-left: auto;
+
+		@include mq("desktop-s", max) {
+			max-width: 100%;
+		}
+	}
+}
+
+.team-list {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 25px;
+
+	@include mq("tablet", max) {
+		grid-template-columns: repeat(1, 1fr);
+	}
+
+	&__item {
+		border-radius: 20px;
+		box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.1);
+		transition: transform 0.3s ease 0s;
+
+		@media (any-hover: hover) {
+			&:hover {
+				transform: scale(1.01);
+			}
+		}
+	}
+}
