--- a/src/scss/elements/_cards.scss
+++ b/src/scss/elements/_cards.scss
@@ -67,3 +67,68 @@
 		}
 	}
 }
+
+.about-doctor-card {
+	transition: transform 0.3s ease 0s;
+
+	span {
+		display: block;
+	}
+
+	&__link {
+		display: flex;
+		padding: 30px;
+		width: 100%;
+		height: 100%;
+
+		@include mq("phone-s", max) {
+			display: block;
+			text-align: center;
+			padding: 20px;
+		}
+	}
+
+	&__image {
+		width: 130px;
+		flex-shrink: 0;
+		margin-right: 20px;
+		text-align: center;
+
+		@include mq("phone-s", max) {
+			margin-left: auto;
+			margin-right: auto;
+			margin-bottom: 15px;
+		}
+	}
+
+	&__img {
+		border-radius: 100%;
+		object-fit: cover;
+		width: 130px;
+		height: 130px;
+		margin-bottom: 20px;
+
+		@include mq("phone-s", max) {
+			margin-bottom: 10px;
+		}
+	}
+
+	&__experience {
+		font-weight: 700;
+		font-size: 15px;
+		line-height: 1.3;
+		color: var(--main-color-light);
+	}
+
+	&__title {
+		font-size: 15px;
+		color: var(--grey-color);
+		margin-bottom: 10px;
+	}
+
+	&__name {
+		&:not(:last-child) {
+			margin-bottom: 20px;
+		}
+	}
+}
