--- a/src/scss/elements/_buttons.scss
+++ b/src/scss/elements/_buttons.scss
@@ -44,3 +44,38 @@
 		padding: 11px 46px;
 	}
 }
+
+.btn-prev,
+.btn-next {
+	background-color: var(--main-color-light);
+	border-radius: 50%;
+	position: absolute;
+	width: 40px;
+	height: 40px;
+	top: 50%;
+	transform: translateY(-50%);
+	transition: background-color 0.3s ease 0s, box-shadow 0.3s ease 0s;
+
+	@media (any-hover: hover) {
+		&:hover {
+			background-color: var(--main-color-dark);
+			box-shadow: 0px 2px 10px rgba(155, 82, 50, 0.5);
+		}
+	}
+
+	&::before {
+		content: "";
+		background-image: url(../images/icons/icon-arrow.svg);
+		background-repeat: no-repeat;
+		background-size: contain;
+		background-position: center;
+		height: 14px;
+		display: block;
+	}
+}
+
+.btn-prev {
+	&::before {
+		transform: rotate(180deg);
+	}
+}
