--- a/src/modules/_header/_header.scss
+++ b/src/modules/_header/_header.scss
@@ -31,7 +31,8 @@
 
 	&--small {
 		margin: 30px 0 30px;
-		box-shadow: 0 13px 18px rgba(8, 6, 6, 0.1);
+		padding-bottom: 30px;
+		box-shadow: 0 18px 15px rgba(8, 6, 6, 0.1);
 	}
 }
 
